--- a/style.css
+++ b/style.css
@@ -3,3 +3,31 @@ canvas {
     margin: auto;
     border: 1px solid black;
 }
+
+/*
+http://webdesignrecipes.com/how-to-full-page-background-image-with-css-and-jquery/
+*/
+
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+  /* Set up positioning */
+  position: fixed;
+  /* またはabsolute; */
+  top: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 1024px){
+  img.bg {
+  left: 50%;
+  margin-left: -512px; }
+}
+
+div#container {
+  position: relative; 
+}
